reboot session resurrect

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 #――――――――――――――――――――――――――――――――
 
 set-option -g status-bg default
-set-option -g status-fg colour240
+set-option -g status-fg magenta
 
 # default window title colors
 #―――――――――――――――――――――――――――――――
@@ -16,7 +16,7 @@ set -g window-status-current-format "#[fg=black,bold bg=default]│#[fg=colour13
 set -g status-style bg=default
 set -g status-right "#[fg=magenta] #[bg=gray] %b %d %Y %l:%M %p"
 set -g status-right '#(gitmux "#{pane_current_path}")'
-set -g status-justify left 
+set -g status-justify centre 
 
 
 # create session
@@ -70,4 +70,19 @@ bind U run "cut -c3- ~/.tmux.conf | sh -s _urlview #{pane_id}"
 
 bind F run "cut -c3- ~/.tmux.conf | sh -s _fpp #{pane_id} #{pane_current_path}"
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
+#tmus plugins
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
