added copy to clipboard and cattapuccin theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,37 +1,7 @@
-# default statusbar colors
-#――――――――――――――――――――――――――――――――
-
-set-option -g status-bg default
-set-option -g status-fg magenta
-
-# default window title colors
-#―――――――――――――――――――――――――――――――
-set-window-option -g window-status-style fg=magenta
-set-window-option -g window-status-style bg=default
-
-set -g status-left-length 85
-set -g status-left "working on#[fg=colour135] #S"
-set -g window-status-current-format "#[fg=black,bold bg=default]│#[fg=white bg=cyan]#W#[fg=black,bold bg=default]│"
-set -g window-status-current-format "#[fg=black,bold bg=default]│#[fg=colour135 bg=black]#W#[fg=black,bold bg=default]│"
-set -g status-style bg=default
-set -g status-right "#[fg=magenta] #[bg=gray] %b %d %Y %l:%M %p"
-set -g status-right '#(gitmux "#{pane_current_path}")'
-set -g status-justify centre 
-
-
-# create session
-bind C-c new-session
-
-# find session
-bind C-f command-prompt -p find-session 'switch-client -t %%'
-
-# session navigation
-bind BTab switch-client -l  # move to last session
-
-# split current window horizontally
-bind - split-window -v
-# split current window vertically
-bind _ split-window -h
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+set -g mouse on
 
 # pane navigation
 bind -r h select-pane -L  # move left
@@ -41,14 +11,29 @@ bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
+# create session
+bind C-c new-session
+
+# find session
+bind C-f command-prompt -p find-session 'switch-client -t %%'
+
+# set status line position 
+set -g status-position top
+setw -g mode-keys vi
+
+# toggle mouse
+bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
+
 # maximize current pane
 bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
+
 
 # pane resizing
 bind -r H resize-pane -L 2
 bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
+
 
 # window navigation
 unbind n
@@ -60,29 +45,38 @@ bind Tab last-window        # move to last active window
 # toggle mouse
 bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
 
+# start selection with v
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 
-# -- urlview -------------------------------------------------------------------
+# bind copy to clipboard
+bind -T copy-mode y send -X copy-pipe-no-clear "xsel -i --clipboard"
+bind -T copy-mode-vi y send -X copy-pipe-no-clear "xsel -i --clipboard"
 
-bind U run "cut -c3- ~/.tmux.conf | sh -s _urlview #{pane_id}"
-
-
-# -- facebook pathpicker -------------------------------------------------------
-
-bind F run "cut -c3- ~/.tmux.conf | sh -s _fpp #{pane_id} #{pane_current_path}"
+# catppuccin theme
+set -g @catppuccin_flavour 'frappe' # or frappe, macchiato, mocha
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_status_modules_right "directory user host session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'catppuccin/tmux'
+# ...alongside
+set -g @plugin 'tmux-plugins/tpm'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-#tmus plugins
-
-set -g @plugin 'tmux-plugins/tmux-resurrect'
