--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,9 @@ bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
 
+# bind tmux horizontal split to S
+bind S split-window -v
+
 
 # window navigation
 unbind n
@@ -53,7 +56,7 @@ bind -T copy-mode y send -X copy-pipe-no-clear "xsel -i --clipboard"
 bind -T copy-mode-vi y send -X copy-pipe-no-clear "xsel -i --clipboard"
 
 # catppuccin theme
-set -g @catppuccin_flavour 'frappe' # or frappe, macchiato, mocha
+set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
@@ -67,7 +70,9 @@ set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{pane_current_path}"
+
+set -g @catppuccin_status_modules_right "session date_time battery"
+set -g @catppuccin_date_time_text "%m/%d %H:%M"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -75,6 +80,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
 # ...alongside
 set -g @plugin 'tmux-plugins/tpm'
 
